<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright (C) 2012 Kazuya (Kaz) Yokoyama <kazuya.yokoyama@gmail.com>

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

         http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-->
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">
        	
    <!-- Dummy for focus -->
    <LinearLayout
    	android:focusable="true"
    	android:focusableInTouchMode="true"
    	android:layout_width="0px"
    	android:layout_height="0px"/>
    
    <ScrollView android:id="@+id/scrollview"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_marginLeft="10dip">
		
		<LinearLayout
		    android:orientation="vertical"
		    android:layout_width="match_parent"
		    android:layout_height="match_parent"
	        android:layout_marginRight="10dip"
		    android:background="#FFFFFF">
		        
		    <!-- Title -->
		    <TextView
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="10dip"
		        android:textStyle="bold"
		        android:text="@string/edit_event_title" />
			<EditText android:id="@+id/title"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="3dip"
		        android:hint="@string/edit_event_title_hint"
		        android:maxLines="1"
		        android:singleLine="true" />

			<!-- Date / Time -->
		    <TextView
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="10dip"
		        android:textStyle="bold"
		        android:text="@string/edit_event_date_time" />
		    <LinearLayout
		        android:orientation="horizontal"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="3dip">
			    <Button android:id="@+id/start_date_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
		            android:text="@string/edit_event_date_button" />
			    <Button android:id="@+id/start_time_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/edit_event_start_time" />
		    </LinearLayout>
		    <LinearLayout
		        android:orientation="horizontal"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="0dip">
			    <Button android:id="@+id/end_date_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
		            android:text="@string/edit_event_date_button" />
			    <Button android:id="@+id/end_time_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/edit_event_end_time" />
		    </LinearLayout>
			
			<!-- Place -->
		    <TextView
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="10dip"
		        android:textStyle="bold"
		        android:text="@string/edit_event_place" />
			<EditText android:id="@+id/place"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="3dip"
		        android:hint="@string/edit_event_place_hint"
		        android:maxLines="1"
		        android:singleLine="true" />
		        
			<!-- Details -->
		    <TextView
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="10dip"
		        android:textStyle="bold"
		        android:text="@string/edit_event_details" />
		    <EditText android:id="@+id/details"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="3dip"
		        android:hint="@string/edit_event_details_hint"
		        android:maxLines="6" />
		    
		    <!-- Image -->
		    <TextView
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="10dip"
		        android:textStyle="bold"
		        android:text="@string/edit_event_image" />
			<Button android:id="@+id/image_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
		        android:layout_marginTop="3dip"
		        android:text="@string/edit_event_image_button" />
			<ImageView android:id="@+id/image"
			  	android:layout_width="wrap_content"
			  	android:layout_height="wrap_content"
				android:background="@drawable/image_shadow"
				android:paddingLeft="4dip"
		        android:paddingTop="3dip"
		        android:paddingRight="6.5dip"
		        android:paddingBottom="6.5dip"
		        android:adjustViewBounds="true"
		        android:layout_marginTop="3dip"
			    android:layout_gravity="left"
			    android:src="@drawable/default_image_event"
			    android:contentDescription="@string/edit_event_image_description"  />
			
			<!-- Add to Cal Option -->
		    <TextView android:id="@+id/add_cal_text"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="10dip"
		        android:textStyle="bold"
		        android:text="@string/edit_event_add_cal" />
			<LinearLayout android:id="@+id/add_cal_layout"
			    android:orientation="horizontal"
				android:layout_marginTop="0dip"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content">
			    
			   	<CheckBox android:id="@+id/add_cal_checkbox"
					android:focusable="false"
					android:focusableInTouchMode="false"
				  	android:layout_width="wrap_content"
				  	android:layout_height="wrap_content" />
			   	
			    <LinearLayout
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:layout_gravity="center_vertical"
			        android:paddingLeft="3dip"
			    	android:orientation="vertical">
			        <TextView
						android:focusable="false"
						android:focusableInTouchMode="false"
			            android:layout_alignParentLeft="true"
			            android:layout_width="match_parent"
			            android:layout_height="wrap_content"
			            android:text="@string/edit_event_add_cal_checkbox" />
			        <TextView android:id="@+id/add_cal_sub"
						android:focusable="false"
						android:focusableInTouchMode="false"
			            android:layout_alignParentLeft="true"
			            android:layout_width="match_parent"
			            android:layout_height="wrap_content"
			            android:text="@string/edit_event_add_cal_checkbox_sub"
			            style="@style/Subtitle" />
		    	</LinearLayout>
		        
		    </LinearLayout>
			
		    <!-- Divider -->	
			<View android:id="@+id/divider"
			    android:layout_width="match_parent"
                android:layout_height="0.5dip"
		        android:layout_marginLeft="10dip"
	            android:layout_marginTop="10dip"
		        android:layout_marginRight="10dip"
                android:background="@color/event_divider" />

			<!-- Buttons -->
			<LinearLayout
			    android:orientation="horizontal"
				android:layout_marginLeft="0dip"
				android:layout_marginTop="10dip"
				android:layout_marginRight="0dip"
				android:layout_marginBottom="10dip"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content">
			    
			    <Button android:id="@+id/save_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
            		android:gravity="center"
            		android:textStyle="bold"
		            android:text="@string/edit_event_button_save" />
			    <Button android:id="@+id/cancel_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
            		android:gravity="center"
                    android:text="@string/edit_event_button_cancel" />
			    
		    </LinearLayout>
		</LinearLayout>
	                
	</ScrollView>
	
</LinearLayout>